# dfrobot-sen0251

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md
cmake/: custom_tests  custom_tests.cmake
include/: sen0251.h  sen0251_exception.h  utils.h
package/: PKGBUILD  dfrobot-sen0251.pc
sen0251/: CMakeLists.txt
sen0251/include/sen0251/: sen0251_exception.h  utils.h
sen0251/src/: sen0251.cpp  sen0251_exception.cpp  utils.cpp
sen0251/tests/: common.cpp  common.h  main.cpp  test_altitude.cpp  test_temperature.cpp
src/: sen0251.cpp  sen0251_exception.cpp  utils.cpp
tests/: common.cpp  common.h  main.cpp  test_altitude.cpp  test_temperature.cpp
